# packages/contracts/openapi.json
@@ -1446,6 +1446,9 @@
               "onboardingCompletedAt": {
                 "type": ["string", "null"]
               },
+              "emailVerified": {
+                "type": "boolean"
+              },
               "createdAt": {
                 "type": "string"
               }
@@ -1457,6 +1460,7 @@
               "theme",
               "timeZone",
               "onboardingCompletedAt",
+              "emailVerified",
               "createdAt"
             ],
             "additionalProperties": false
@@ -1966,6 +1970,9 @@
               "onboardingCompletedAt": {
                 "type": ["string", "null"]
               },
+              "emailVerified": {
+                "type": "boolean"
+              },
               "createdAt": {
                 "type": "string"
               }
@@ -1977,6 +1984,7 @@
               "theme",
               "timeZone",
               "onboardingCompletedAt",
+              "emailVerified",
               "createdAt"
             ],
             "additionalProperties": false
@@ -2968,6 +2976,9 @@
               "onboardingCompletedAt": {
                 "type": ["string", "null"]
               },
+              "emailVerified": {
+                "type": "boolean"
+              },
               "createdAt": {
                 "type": "string"
               }
@@ -2979,6 +2990,7 @@
               "theme",
               "timeZone",
               "onboardingCompletedAt",
+              "emailVerified",
               "createdAt"
             ],
             "additionalProperties": false
@@ -3012,6 +3024,9 @@
               "onboardingCompletedAt": {
                 "type": ["string", "null"]
               },
+              "emailVerified": {
+                "type": "boolean"
+              },
               "createdAt": {
                 "type": "string"
               }
@@ -3023,6 +3038,7 @@
               "theme",
               "timeZone",
               "onboardingCompletedAt",
+              "emailVerified",
               "createdAt"
             ],
             "additionalProperties": false
@@ -3337,6 +3353,9 @@
               "onboardingCompletedAt": {
                 "type": ["string", "null"]
               },
+              "emailVerified": {
+                "type": "boolean"
+              },
               "createdAt": {
                 "type": "string"
               }
@@ -3348,6 +3367,7 @@
               "theme",
               "timeZone",
               "onboardingCompletedAt",
+              "emailVerified",
               "createdAt"
             ],
             "additionalProperties": false
@@ -3809,6 +3829,9 @@
           "onboardingCompletedAt": {
             "type": ["string", "null"]
           },
+          "emailVerified": {
+            "type": "boolean"
+          },
           "createdAt": {
             "type": "string"
           }
@@ -3820,6 +3843,7 @@
           "theme",
           "timeZone",
           "onboardingCompletedAt",
+          "emailVerified",
           "createdAt"
         ],
         "additionalProperties": false
@@ -3860,6 +3884,9 @@
               "onboardingCompletedAt": {
                 "type": ["string", "null"]
               },
+              "emailVerified": {
+                "type": "boolean"
+              },
               "createdAt": {
                 "type": "string"
               }
@@ -3871,6 +3898,7 @@
               "theme",
               "timeZone",
               "onboardingCompletedAt",
+              "emailVerified",
               "createdAt"
             ],
             "additionalProperties": false
